arc: Prevent navigation to ARC subpage on 'Learn more' link.

Bug: 767374
Test: Manually
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I7f8ba3901dfcbd3f9728551cc375bda182a60eba
Reviewed-on: https://chromium-review.googlesource.com/677410
Commit-Queue: Yury Khmel <khmel@google.com>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#503574}
Former-commit-id: 15938b08ef12483c1ea6fd33800c469d3a25b3a3